# htmlmetadata

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
htmlmetadata/: __init__.py  __main__.py  main.py  rules.py
tests/: test_rules.py
