[sdist]
formats = zip

[bdist_wheel]
universal = 1

[metadata]
name = htmlmetadata
version = attr: htmlmetadata.__version__
summary=Extract metadata from html pages using Open Graph metadata, HTML metadata, and a series of fallbacks
url=https://github.com/mariocesar/htmlmetadata
author="M. César Señoranis"
author_email="mariocesar@humanzilla.com"
license_file = LICENSE
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Tracker = https://github.com/mariocesar/htmlmetadata/issues
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
packages = find:
install_requires =
    beautifulsoup4>=4.8.1
    html5>=0.0.9

[options.extras_require]
develop =
    wheel
    twine
    pytest

[options.entry_points]
console_scripts =
    htmlmetadata = htmlmetadata.__main__
